--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,44 +1,59 @@
+/**
+ This file is part of TinyWeatherForecastGermany.
+
+ Copyright (c) 2020, 2021, 2022, 2023 Pawel Dube
+
+ This program is free software: you can redistribute it and/or modify
+ it under the terms of the GNU General Public License as published by
+ the Free Software Foundation, either version 3 of the License, or
+ (at your option) any later version.
+
+ This program is distributed in the hope that it will be useful,
+ but WITHOUT ANY WARRANTY; without even the implied warranty of
+ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ GNU General Public License for more details.
+
+ You should have received a copy of the GNU General Public License
+ along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ **/
+
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 33
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
+    compileSdkVersion 30
+    buildToolsVersion '30.0.3'
 
     defaultConfig {
-        applicationId "de.kaffeemitkoffein.tinyweatherforecastgermany"        
-        minSdkVersion 29
-        targetSdkVersion 33
-        versionCode 1600
-        versionName "1.6"
-        multiDexEnabled true
-        vectorDrawables.useSupportLibrary = true
+        applicationId "de.kaffeemitkoffein.tinyweatherforecastgermany"
+        minSdkVersion 19
+        targetSdkVersion 30
+        versionCode 46
+        versionName "0.61.2"
     }
 
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
-    }
 
-    lintOptions {
-        checkReleaseBuilds false
-        disable 'MissingTranslation'
+    userdebug {
+        initWith release
+        minifyEnabled false
+        versionNameSuffix "-userdebug_"+new Date().format("yyyyMMDD")
     }
-    return void
+    debug {
+        initWith release
+        minifyEnabled false
+        signingConfig signingConfigs.debug
+        versionNameSuffix "-debug_"+new Date().format("yyyyMMDD-HHmm00ss")
+    }
+    }
 }
 
 dependencies {
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    implementation 'androidx.preference:preference:1.2.1'
-    implementation 'androidx.recyclerview:recyclerview:1.3.2'
-    implementation 'androidx.legacy:legacy-preference-v14:1.0.0'
+
+}
     implementation 'androidx.webkit:webkit:1.7.0'
     implementation 'net.lingala.zip4j:zip4j:2.9.1'
     implementation 'com.github.woheller69:preferences:1.2'
