--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,16 +4,16 @@ on: [push, pull_request, workflow_dispatch]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     steps:
     - name: Checkout repo
       uses: actions/checkout@v1
 
-    - name: Setup JDK 17
+    - name: Setup JDK 11
       uses: actions/setup-java@v1
       with:
-        java-version: 17
+        java-version: 11
 
     - name: Build with Gradle
       run: ./gradlew assembleDebug
