--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,15 +21,5 @@ jobs:
     - uses: actions/upload-artifact@v3
       with:
         name: app-debug.apk
-        path: app/build/outputs/apk/debug/app-debug.apk
+        path: app/build/outputs/apk/
 
-    - name: Create release
-      uses: marvinpinto/action-automatic-releases@latest
-      if: github.ref == 'refs/heads/master'
-      with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        automatic_release_tag: "latest"
-        prerelease: false
-        title: ${{ github.sha }}
-        files: |
-          app/build/outputs/apk/debug/app-debug.apk
